[gd_scene load_steps=8 format=3 uid="uid://dhm8k7a2tctc6"]

[ext_resource type="Script" uid="uid://ci1j04i7aapj8" path="res://Scenes/Managers/Main Menu/main_menu.gd" id="1_bfjoe"]
[ext_resource type="Texture2D" uid="uid://plg6421xb063" path="res://Assets/Used/SelfMade/lessblur.png" id="2_pyirc"]
[ext_resource type="Texture2D" uid="uid://ds6cxbkyql1yq" path="res://Assets/Used/SelfMade/Book.png" id="3_eunj0"]
[ext_resource type="FontFile" uid="uid://dthjxfhunhsnr" path="res://Assets/Used/DungeonFont.ttf" id="4_eunj0"]
[ext_resource type="Texture2D" uid="uid://co20htgweu0yy" path="res://Assets/Used/pixel-robot/robot-preview.png" id="5_pyirc"]
[ext_resource type="Texture2D" uid="uid://ctd08xn0rshba" path="res://Assets/Used/SelfMade/Question_Dice.png" id="6_wc4bt"]
[ext_resource type="FontFile" uid="uid://bofsh7urlfter" path="res://addons/dialogic/Example Assets/Fonts/marksman.otf" id="7_dghq7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bfjoe")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_pyirc")
expand_mode = 2

[node name="Header" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -336.0
offset_right = 352.0
offset_bottom = 144.0
grow_horizontal = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_eunj0")
theme_override_font_sizes/normal_font_size = 128
text = "Doolhof"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rosie" type="TextureRect" parent="Header"]
layout_mode = 1
offset_left = 32.0
offset_top = -8.0
offset_right = 352.0
offset_bottom = 312.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_pyirc")

[node name="Dice" type="TextureRect" parent="Header"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -64.0
offset_right = -38.0
offset_bottom = 58.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("6_wc4bt")

[node name="Book" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Book"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 100

[node name="TextureRect" type="TextureRect" parent="Book/MarginContainer"]
custom_minimum_size = Vector2(711, 486)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_eunj0")

[node name="Main Screen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPage" type="Control" parent="Main Screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -164.0
offset_right = -16.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Main Screen/LeftPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Main Screen/LeftPage/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Main Screen/LeftPage/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7_dghq7")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center][font_size=40]Informatie[/font_size][/center]

Doolhof is een educatief spel ontwikkeld door Alette Farzad voor haar Bachelorscriptie in 2025. 

[center][font_size=40]Dankbetuiging[/font_size][/center]

Dit project is mogelijk gemaakt door de supervisie van Giulio Barbero & Anna van der Meulen

Verder zijn er nog vele mensen die meegedragen hebben aan dit project door o.a. het testen van dit spel. Zie ze in 'Credits'."
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightPage" type="Control" parent="Main Screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -164.0
offset_right = 328.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Main Screen/RightPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 142
theme_override_constants/margin_right = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Main Screen/RightPage/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Start" type="Button" parent="Main Screen/RightPage/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Spel Starten"

[node name="Credits" type="Button" parent="Main Screen/RightPage/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="Main Screen/RightPage/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Afsluiten"

[node name="Credits" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPage" type="Control" parent="Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -164.0
offset_right = -16.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Credits/LeftPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/LeftPage/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/LeftPage/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7_dghq7")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center][font_size=40] Asset Credits[/font_size][/center]

Objecten & Tilemaps: 
[] door Kenney
  x Tiny Town
  x Tiny Dungeon
[] door Arex_V op Itch
  x DampDungeons
[] door David Harrington
  x pixel robot
[] door HumblePixel op Itch
  x Pocket Inventory
    Series

Lettertype
[] DungeonFont by vrtxrry
[] Public Pixel by GGBotNet

Verder hebben Gwen & Darya3D geholpen met wat beeldbewerking."
vertical_alignment = 1

[node name="RightPage" type="Control" parent="Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -164.0
offset_right = 328.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Credits/RightPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/RightPage/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/RightPage/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7_dghq7")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center][font_size=40]BÃ¨ta-testers[/font_size][/center]

Met veel dank aan:
  Mark Rengers, Flynn 
  Munter, Clover Mikuru,
  Alice Kramers, Jeroen,
  Yaell, Irene, Gwen,
  Peltos, Dani, 
  Michiel van der Bijl
  

[center][font_size=40]Sluitwoord[/font_size][/center]

Verder wil ik graag nog Ben personelijk bedanken voor het helpen met het uitpluizen van Godot."
vertical_alignment = 1

[node name="Button" type="Button" parent="Credits/RightPage/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Terug naar Hoofdmenu"

[connection signal="pressed" from="Main Screen/RightPage/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Main Screen/RightPage/MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Main Screen/RightPage/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Credits/RightPage/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
